Unit test creation

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,3 +24,6 @@ jobs:
 
       - name: 🏗️ Compile project
         run: npm run build
+      
+      - name: 🧪 Ejecutar pruebas
+        run: npm test
