--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
       - name: 🏗️ Compile project
         run: npm run build
       
-      - name: 🧪 Ejecutar pruebas
+      - name: 🧪 Execute tests
         run: npm test
